[package]
name = "heartbeats-simple-sys"
version = "0.2.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "FFI bindings to heartbeats-simple libraries"
license = "MIT"
homepage = "https://github.com/libheartbeats/heartbeats-simple-sys"
repository = "https://github.com/libheartbeats/heartbeats-simple-sys"
keywords = ["heartbeats", "timing", "performance", "accuracy", "energy", "power", "bindings"]

[lib]
name = "heartbeats_simple_sys"
path = "lib.rs"

[dependencies.hbs-common-sys]
path = "hbs-common-sys"

[dependencies.hbs-sys]
path = "hbs-sys"

[dependencies.hbs-acc-sys]
path = "hbs-acc-sys"

[dependencies.hbs-pow-sys]
path = "hbs-pow-sys"

[dependencies.hbs-acc-pow-sys]
path = "hbs-acc-pow-sys"

[build-dependencies]
pkg-config = "0.3.2"
