[package]
name = "heartbeats-simple-sys"
version = "0.2.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "FFI bindings to heartbeats-simple libraries"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/libheartbeats/heartbeats-simple-sys"
repository = "https://github.com/libheartbeats/heartbeats-simple-sys"
keywords = ["heartbeats", "performance", "accuracy", "power", "bindings"]

[lib]
name = "heartbeats_simple_sys"
path = "lib.rs"

[dependencies]
hbs-common-sys = "0.2"
hbs-sys = "0.2"
hbs-acc-sys = "0.2"
hbs-pow-sys = "0.2"
hbs-acc-pow-sys = "0.2"

[build-dependencies]
pkg-config = "0.3.2"
