[package]
name = "heartbeats-simple-sys"
version = "0.4.3"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "FFI bindings to heartbeats-simple"
license = "MIT/Apache-2.0"
homepage = "https://github.com/libheartbeats/heartbeats-simple-sys"
repository = "https://github.com/libheartbeats/heartbeats-simple-sys"
keywords = ["heartbeats", "performance", "accuracy", "power", "bindings"]

links = "heartbeats-simple"
build = "build.rs"

[lib]
name = "heartbeats_simple_sys"
path = "lib.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3.2"
cmake = "0.1.13"
