[package]
name = "hbs-acc-sys"
version = "0.2.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "FFI bindings to libhbs-acc-static"
license = "MIT"
homepage = "https://github.com/libheartbeats/heartbeats-simple-sys"
repository = "https://github.com/libheartbeats/heartbeats-simple-sys"
keywords = ["heartbeats", "timing", "performance", "accuracy", "bindings"]

links = "hbs-acc-static"
build = "build.rs"

[lib]
name = "hbs_acc_sys"
path = "lib.rs"

[dependencies.hbs-common-sys]
path = "../hbs-common-sys"

[dependencies]
libc = "0.1"

[build-dependencies]
pkg-config = "0.3.2"

