[package]
name = "hbs-acc-sys"
version = "0.2.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "FFI bindings to libhbs-acc"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/libheartbeats/heartbeats-simple-sys"
repository = "https://github.com/libheartbeats/heartbeats-simple-sys"
keywords = ["heartbeats", "timing", "performance", "accuracy", "bindings"]

links = "hbs-acc"
build = "build.rs"

[lib]
name = "hbs_acc_sys"
path = "lib.rs"

[dependencies.hbs-common-sys]
path = "../hbs-common-sys"

[dependencies]
libc = "0.2"

[build-dependencies]
hbs-builder = { path = "../hbs-builder" }
