[package]
name = "hbs-common-sys"
version = "0.1.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "Common FFI bindings to heartbeats-simple libraries"
license = "MIT"
homepage = "https://github.com/libheartbeats/heartbeats-simple-sys"
repository = "https://github.com/libheartbeats/heartbeats-simple-sys"
keywords = ["heartbeats", "timing", "performance", "energy", "power", "bindings"]

[lib]
name = "hbs_common_sys"
path = "lib.rs"

[dependencies]
libc = "0.2"
