[package]
name = "hbs-common-sys"
version = "0.2.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "Common FFI bindings to heartbeats-simple libraries"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/libheartbeats/heartbeats-simple-sys"
repository = "https://github.com/libheartbeats/heartbeats-simple-sys"
keywords = ["heartbeats", "performance", "power", "bindings"]

[lib]
name = "hbs_common_sys"
path = "lib.rs"

[dependencies]
libc = "0.2"
