[package]
name = "hbs-pow-sys"
version = "0.1.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "FFI bindings to libhbs-pow-static"
license = "MIT"
homepage = "https://github.com/libheartbeats/heartbeats-simple-sys"
repository = "https://github.com/libheartbeats/heartbeats-simple-sys"
keywords = ["heartbeats", "timing", "performance", "energy", "power", "bindings"]

links = "hbs-pow-static"
build = "build.rs"

[lib]
name = "hbs_pow_sys"
path = "lib.rs"

[dependencies.hbs-common-sys]
path = "../hbs-common-sys"

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3.2"

