[package]
name = "hbs-pow-sys"
version = "0.2.0"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "FFI bindings to libhbs-pow"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/libheartbeats/heartbeats-simple-sys"
repository = "https://github.com/libheartbeats/heartbeats-simple-sys"
keywords = ["heartbeats", "performance", "power", "bindings"]

links = "hbs-pow"
build = "build.rs"

[lib]
name = "hbs_pow_sys"
path = "lib.rs"

[dependencies.hbs-common-sys]
path = "../hbs-common-sys"

[dependencies]
libc = "0.2"

[build-dependencies]
hbs-builder = { path = "../hbs-builder" }
