[package]
name = "hbs-sys"
version = "0.2.1"
authors = ["Connor Imes <connor.k.imes@gmail.com>"]
description = "FFI bindings to libhbs"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/libheartbeats/heartbeats-simple-sys"
repository = "https://github.com/libheartbeats/heartbeats-simple-sys"
keywords = ["heartbeats", "timing", "performance", "bindings"]

links = "hbs"
build = "build.rs"

[lib]
name = "hbs_sys"
path = "lib.rs"

[dependencies]
libc = "0.2"
hbs-common-sys = "0.2"

[build-dependencies]
hbs-builder = "0.2"
